[package]
name = "rsdsl_udpdumpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_pipe = "1.1.4"
pcap = "1.1.0"
ringbuf = "0.3.3"
rsdsl_netlinkd = { git = "https://github.com/rsdsl/netlinkd.git", version = "0.6.2" }
thiserror = "1.0"
