[package]
name = "rsdsl_netdumpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
byteorder = "^1.4.3"
pcap = { version = "1.1.0", features = ["capture-stream"] }
pcap-file-tokio = "0.1.0"
ringbuf = "0.3.3"
rsdsl_netlinklib = { git = "https://github.com/rsdsl/netlinklib.git", default-features = false, features = ["status"] }
russh = "0.40.0"
russh-keys = "^0.40"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
